@@ -79,6 +79,13 @@ CHANGES - Current Version:
 
 - Fixed small memory leak in OGRTABDataSource::CreateLayer() (NFW)
 
+- Support SpatialFilter inside IMapInfoFile::GetNextFeature().  
+  TAB files should support spatial filter via their spatial index for 
+  optimal performance.
+
+- Avoid unnecessary cloning of features in IMapInfoFile::GetNextFeature() and
+  IMapInfoFile::GetFeature().
+
 
 Version 1.0.4 - (2000-11-14)
 ----------------------------
@@ -268,5 +275,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.45 2001-02-06 22:13:54 warmerda Exp $
+$Id: HISTORY.TXT,v 1.46 2001-02-27 19:59:05 daniel Exp $
 ------------
